[tool.poetry]
name = "vectara-ingest"
version = "1.7.2"
description = "An open source framework to crawl data sources and ingest into Vectara"
authors = ["Ofer Mendelevitch <ofermend@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "vectara_ingest"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "2.31.0"
pdfkit = "1.0.0"
ultimate-sitemap-parser = "0.5"
authlib = "1.2.0"
feedparser = "6.0.10"
pyyaml = ">=6.0"
grpcio = "1.56.2"
cygrpc = "1.0.3"
beautifulsoup4 = "4.12.3"
google-auth = "2.16.1"
google-auth-oauthlib = "1.0.0"
google-auth-httplib2 = "0.1.0"
google-api-python-client = "2.82.0"
psutil = "5.9.4"
omegaconf = "2.3.0"
python-dotenv = "1.0.0"
python-slugify = "8.0.1"
markdown = "3.5.2"
notion-client = "2.0.0"
biopython = "1.81"
boto3 = "1.26.116"
mwviews = "0.2.1"
toml = "0.10.2"
attrdict = "2.0.1"
pandas = ">=1.5.3"
ratelimiter = "1.2.0"
python-dateutil = "2.8.2"
playwright = "1.41.2"
pdf2image = ">=1.16"
tabulate = "0.9.0"
pytesseract = "0.3.10"
xmltodict = "0.13.0"
nbconvert = "7.2.10"
nbformat = "5.8.0"
docutils = "0.20.1"
arxiv = "1.4.7"
goose3 = "3.1.19"
sqlalchemy = "2.0.14"
pymysql = "1.0.3"
pg8000 = "1.29.8"
mypy = "1.5.1"
typing = "3.7.4.3"
fastdatamask = "0.0.6"
justext = "3.0.0"
jieba = "0.42.1"
langdetect = "1.0.9"
ray = "2.7.1"
synapseclient = "4.1.1"
python-magic = "0.4.27"
openai = "1.6.1"
slack-sdk="3.27.1"
html2text = "2024.2.26"
unstructured = {version = "0.12.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
